test/netlist/error/duplicated-input.bop
A(a, a) = b
where
  b = id(a);
end where;
